# brepvm

./: .gitmodules  CMakeLists.txt  README.md
include/brepvm/: Bytecodes.h  CodeBlock.h  CodesBuilder.h  Compiler.h  Decompiler.h  DelComments.h  FlowGraph.h  OpFieldMap.h  OpFieldType.h  Optimizer.h  Profiler.h  VM.h  VMHelper.h  ValueCache.h  ValueType.h  geo_opcodes.h  math_opcodes.h  stl_opcodes.h
platform/msvc/: .gitignore
platform/msvc/projects/: brepvm.vcxproj  brepvm.vcxproj.filters
source/: Bytecodes.cpp  CodesBuilder.cpp  Compiler.cpp  Decompiler.cpp  DelComments.cpp  FlowGraph.cpp  OpFieldMap.cpp  Optimizer.cpp  Profiler.cpp  VM.cpp  VMHelper.cpp  ValueCache.cpp  geo_opcodes.cpp  math_opcodes.cpp  stl_opcodes.cpp
